<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calculator">Calculator Activity</string>
    <string name="defaultValTextView">There are no results to display</string>
    <string name="resultTextView">Result: </string>
    <string name="clearbutton_textview">Clear</string>
    <string name="calcbutton_title">Show Calculator</string>
    <string name="division_title">/</string>
    <string name="multiplication_title">*</string>
    <string name="hint_text">Enter Calculation</string>
    <string name="subtraction_title">-</string>
    <string name="addition_title">+</string>
    <string name="seven_text">7</string>
    <string name="eight_text">8</string>
    <string name="nine_text">9</string>
    <string name="four_text">4</string>
    <string name="five_text">5</string>
    <string name="six_text">6</string>
    <string name="one_text">1</string>
    <string name="two_text">2</string>
    <string name="three_text">3</string>
    <string name="enter_text">Enter</string>
    <string name="cancel_text">Cancel</string>
    <string name="clear_text">Clear</string>
    <string name="clear2_text">C</string>
    <string name="zero_text">0</string>
    <string name="button_7">New Button</string>
    <string name="equal_text">New Button</string>
    <string name="title_activity_main">Calculator</string>
    <string name="EqText">New Button</string>
    <string name="visibility">0</string>
    <string name="action_clear">Clear</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_read_data">ReadDataActivity</string>
    <string name="read_data">New Button</string>
    <string name="text_read_data">Read Data</string>
    <string name="action_return">Back</string>

</resources>
